2006-03-14  David Reveman  <davidr@novell.com>

	* src/main.c (main): Add --version command line option.

	* src/event.c:
	* src/screen.c:
	* include/compiz.h: Add bindings for changing window opacity.

2006-03-14  Radek Doulik  <rodo@novell.com>

	* src/event.c (handleEvent): handle minimize/maximize/unmaximize
	window keybindings

	* src/screen.c: added minimize/maximize/unmaximize window
	options/keybindings

	* src/window.c (maximizeWindow): new helper function
	(unmaximizeWindow): ditto

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add darken background option (Daniel G. Taylor).

2006-03-13  David Reveman  <davidr@novell.com>

	* src/display.c (eventLoop):
	* include/compiz.h:
	* src/screen.c (addScreen): CopySubBufferMESA support.

2006-03-07  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (lower_window):
	Remove unused variable tmp.

	* src/event.c:
	* src/display.c:
	* src/window.c:
	* src/screen.c:
	* include/compiz.h: Better window stacking support.

	* gnome/window-decorator/gnome-window-decorator.c: Lower window
	when clicking button 2 on titlebar.

	* src/window.c (ensureWindowVisibility): Only ensure that window is
	visible if it isn't a override redirect window, dock window or
	window with struts.

2006-03-06  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.6.

	* plugins/cube.c: Skydome update. (MacSlow)

	* src/window.c: Ensure window visibility when activating window.

2006-03-05  David Reveman  <davidr@novell.com>

	* src/window.c (closeWindow): Use protocol mask to determine if
	Client Message should be send or if we should kill the client.

	* plugins/decoration.c: Don't draw shadow only decorations around
	windows with alpha channel.

2006-03-03  David Reveman  <davidr@novell.com>

	* src/texture.c (readImageBufferToTexture):
	(readImageToTexture): Check that returnWidth and returnHeight are
	not NULL.
